Name Changed To Rohan

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="infocontainer">
                 <div class="devinfo">
                     <div class="hello">Hii,I'm</div>
-                    <div class="name">Raghunath Avhad</div>
+                    <div class="name">Rohan Avhad</div>
                     <div class="about">a Developer, an Entrepreneur and a Programmer</div>
                     <div class="moreabout">I'm an undergraduate student.I'm currently in 3rd year of Bachelor of
                         Engineering(BE).</div>
